# dist-meta

./: .bumpversion.cfg  .pre-commit-config.yaml  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
benchmark/: importlib_metadata_no_cache.diff  run_test.sh  test_benchmark.py
dist_meta/: __init__.py  _utils.py  distributions.py  entry_points.py  metadata.py  metadata_mapping.py  record.py  wheel.py
doc-source/: Source.rst  conf.py  index.rst  license.rst  local_extension.py  requirements.txt  usage.rst
doc-source/_static/: style.css
doc-source/api/: distributions.rst  entry_points.rst  metadata.rst  metadata_mapping.rst  record.rst  wheel.rst
recipes/: README.rst
recipes/check_arch/: README.rst  check_arch.py  demo.py  requirements-demo.txt
recipes/check_conflicts/: LICENSE  README.rst  check_conflicts.py
recipes/check_integrity/: LICENSE  README.rst  check_integrity.py
recipes/show_requirements/: LICENSE  README.rst  show_requirements.py
tests/: conftest.py  example_entry_points.txt  example_metadata  requirements.txt  test_distributions.py  test_entry_points.py  test_metadata.py  test_metadata_mapping.py  test_metadata_top_packages.py  test_record.py  test_wheel.py  yaml_packaging.py
tests/test_distributions_/: test_distribution_Babel_2_9_1_py2_py3_none_any_whl_.yml  test_distribution_Babel_2_9_1_py2_py3_none_any_whl__cd.repr  test_distribution_Babel_2_9_1_py2_py3_none_any_whl__cs.repr  test_distribution_Babel_2_9_1_py2_py3_none_any_whl__distro.path  test_distribution_Babel_2_9_1_py2_py3_none_any_whl__distro.repr  test_distribution_Babel_2_9_1_py2_py3_none_any_whl__wd.path  test_distribution_Babel_2_9_1_py2_py3_none_any_whl__wd.repr  test_distribution_Jinja2_3_0_1_py3_none_any_whl_.yml  test_distribution_Jinja2_3_0_1_py3_none_any_whl__cd.repr  test_distribution_Jinja2_3_0_1_py3_none_any_whl__cs.repr  test_distribution_Jinja2_3_0_1_py3_none_any_whl__distro.path  test_distribution_Jinja2_3_0_1_py3_none_any_whl__distro.repr  test_distribution_Jinja2_3_0_1_py3_none_any_whl__wd.path  test_distribution_Jinja2_3_0_1_py3_none_any_whl__wd.repr  test_distribution_MarkupSafe_2_0_1_cp38_cp38_manylinux2010_x86_64_whl_.yml  test_distribution_MarkupSafe_2_0_1_cp38_cp38_manylinux2010_x86_64_whl__cd.repr  test_distribution_MarkupSafe_2_0_1_cp38_cp38_manylinux2010_x86_64_whl__cs.repr  test_distribution_MarkupSafe_2_0_1_cp38_cp38_manylinux2010_x86_64_whl__distro.path  test_distribution_MarkupSafe_2_0_1_cp38_cp38_manylinux2010_x86_64_whl__distro.repr  test_distribution_MarkupSafe_2_0_1_cp38_cp38_manylinux2010_x86_64_whl__wd.path  test_distribution_MarkupSafe_2_0_1_cp38_cp38_manylinux2010_x86_64_whl__wd.repr  test_distribution_PyAthena_2_3_0_py3_none_any_whl_.yml  test_distribution_PyAthena_2_3_0_py3_none_any_whl_Distribution_.yml  test_distribution_PyAthena_2_3_0_py3_none_any_whl_Distribution__distro.path  test_distribution_PyAthena_2_3_0_py3_none_any_whl_Distribution__distro.repr  test_distribution_PyAthena_2_3_0_py3_none_any_whl__cd.repr  test_distribution_PyAthena_2_3_0_py3_none_any_whl__cs.repr  test_distribution_PyAthena_2_3_0_py3_none_any_whl__wd.path  (+479 more)
(+23 files in other folders)
